// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArtworkCaption snapshot renders a classic caption properly 1`] = `
.c0 {
  margin-top: 10px;
  display: block;
}

.c0 a {
  color: #666;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 .ArtworkCaption__ArtistNames-t0bcvj-0 {
  margin-right: 0;
  font-weight: bold;
}

.c0 .ArtworkCaption__ArtistNames-t0bcvj-0::after {
  content: ", ";
}

.c0 .title {
  font-style: italic;
}

<div>
  <div
    className="display-artwork__caption c0 sc-gzVnrw ibZhkv sc-EHOje iZJeQH"
    color="#666"
    fontFamily="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
    fontSize="14px"
  >
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "<span><span class=\\"ArtworkCaption__ArtistNames-t0bcvj-0 ciyMlo\\"><span class=\\"name\\">Fernando Botero</span></span><span class=\\"title\\">Nude on the Beach</span><span>, </span><span class=\\"date\\">2000</span>. Gary Nader</span>",
        }
      }
    />
  </div>
</div>
`;

exports[`ArtworkCaption snapshot renders a fullscreen caption properly 1`] = `
.c2 {
  margin-right: 30px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 a {
  color: black;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 .title,
.c0 .title a {
  font-style: italic;
}

@media (max-width:720px) {
  .c0 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (max-width:720px) {
  .c1.artist-name {
    margin-bottom: 5px;
  }
}

<div>
  <div
    className="c0 sc-bZQynM bOrPFB sc-EHOje iJMdQR"
    fontFamily={
      Object {
        "fontFamily": "Unica77LLWebMedium, 'Helvetica Neue', Helvetica, Arial, sans-serif",
        "fontWeight": 500,
      }
    }
    fontSize={
      Array [
        "14px",
        "16px",
      ]
    }
  >
    <div
      className="c1"
    >
      <span
        className="c2"
      >
        <span
          className="name"
        >
          Fernando Botero
        </span>
      </span>
    </div>
    <div>
      <div
        className="c1"
      >
        <span
          className="title"
        >
          Nude on the Beach
        </span>
        <span>
          , 
        </span>
        <span
          className="date"
        >
          2000
        </span>
      </div>
      <div
        className="c1"
      >
        Gary Nader
        <span>
          . 
        </span>
        <span
          className="credit"
        >
          Courtesy of Gary Nader
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`ArtworkCaption snapshot renders a standard caption properly 1`] = `
.c2 {
  margin-right: 30px;
}

.c0 {
  padding: 0;
  margin-top: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 a {
  color: #C2C2C2;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 .title,
.c0 .title a {
  font-style: italic;
}

.eKMyBw .c1 {
  margin-right: 0;
  font-weight: bold;
}

.eKMyBw .c1::after {
  content: ", ";
}

@media (max-width:600px) {
  .c0 {
    padding: 0 10px;
  }
}

<div>
  <div
    className="c0 sc-bZQynM bOrPFB sc-EHOje eiIllQ"
    color="#C2C2C2"
    fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
    fontSize="14px"
  >
    <span
      className="c1 c2"
    >
      <span
        className="name"
      >
        Fernando Botero
      </span>
    </span>
    <div>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "<span><span class=\\"title\\">Nude on the Beach</span><span>, </span><span class=\\"date\\">2000</span></span>",
          }
        }
      />
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "<span>Gary Nader<span>. </span><span class=\\"credit\\">Courtesy of Gary Nader</span></span>",
          }
        }
      />
    </div>
  </div>
</div>
`;
